完成房东、房源的模块、预订表和租客表的设计

--- a/public/admin/static/h-ui/css/delpic.css
+++ b/public/admin/static/h-ui/css/delpic.css
@@ -10,7 +10,7 @@
 }
 .imgbox p {
     font-size:18px;
-    color: #fff;
+    color: red;
     position: absolute;
     cursor:pointer;
     right:8px;
